# json-wrapper

./: .gitignore  CMakeLists.txt  README.md  config.json  jsonConfig.cmake  jsonConfig.h  test.cpp
